--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,7 @@
 body, html {
   width: 100%;
   height: 100%;
-  box-sizing: inherit;
+  box-sizing: border-box;
   margin: 0;
 }
 
@@ -11,3 +11,17 @@ body, html {
 *:after {
   box-sizing: inherit;
 }
+
+// VENDOR STYLES
+@import '~codemirror/lib/codemirror';
+@import '~codemirror/theme/dracula';
+
+.CodeMirror {
+  height: 100%;
+  font-family: 'Fira Code', monospace;
+  padding-top: 8px;
+}
+.CodeMirror-lines {
+  padding-left: 16px;
+}
+
